<resources>
    <string name="app_name">Tour_Guide</string>
    <string name="Events">Events</string>
    <string name="Events2">Diving</string>
    <string name="Events3">KiteSurfing</string>
    <string name="Events4">Lagoon Fish</string>
    <string name="View">View</string>
    <string name="todo">TODO</string>
    <string name="Add_Event">Add Event</string>
    <string name="Event_Name">Event Name</string>
    <string name="loc_info">Location Information</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="cont_info">Contact Information</string>
    <string name="Name">Name</string>
    <string name="Phone">Phone</string>
    <string name="email">Email</string>
    <string name="price">Price</string>
    <string name="Photo">Photo</string>
    <string name="Descrption">Description</string>
    <string name="Add">Add</string>
    <string name="Edit_Name">Edit Name</string>
    <string name="edit_event">Edit Event</string>
    <string name="save_changes">Save Changes</string>
    <string name="view_events">View Events</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="place">Blue Kite Center Kalpitiya</string>
    <string name="contact_us">Contact US</string>
    <string name="contact_details">Mr.Kumar, 0777123456, Kumar@gmail.com</string>
    <string name="about_event">About the Event</string>
    <string name="event_details">World\'s Best Kitesurfing: Kalpitiya.In Kalpitiya there are two distinct kite seasons</string>
    <string name="loc_description">Kandakuliya, Kalpitiya 61358, Sri Lanka</string>
    <string name="price_details">Rs.3000</string>
    <string name="contact_details_for_event">Contact Details</string>
    <string name="place1">Surf-Point Kites</string>
    <string name="kite_surfing">Kite-Surfing</string>
    <string name="place2">Epic Encounters Kites</string>
    <string name="price_place1">Rs.3000/=</string>
    <string name="price_place2">Rs.2500/=</string>
    <string name="price_place3">Rs.2000/=</string>
    <string name="see_more">See More</string>

    <string name="heading">Sri Lanka Tour Guid</string>
    <string name="travel">Traveling Places</string>
    <string name="hotel">Hotels and Restaurants</string>
    <string name="events">Events</string>
    <string name="review">Travel Review</string>
    <string name="adventure">Adventure Places</string>
    <string name="historical">Historical Places</string>
    <string name="beach">Beach Sides</string>
    <string name="view">View More</string>
    <string name="desc">Description</string>
    <string name="location">Location</string>
    <string name="editt">Edit Travel Place</string>

    <string name="add_new_hotel">Add New Hotel</string>
    <string name="hotel_name">Hotel Name:</string>
    <string name="district">District:</string>
    <string name="type">Type:</string>
    <string name="photo">Photo:</string>
    <string name="locations">Location</string>
    <string name="price_detailss">Price Details</string>
    <string name="phone">Phone:</string>
    <string name="update_hotel_details">Update Hotel Details</string>
    <string name="update_details">UPDATE DETAILS</string>
    <string name="description">Description:</string>
    <string name="view_details">View Details</string>
    <string name="overview">Overview</string>
    <string name="hotel_shangri_la">Hotel Shangri-La</string>
    <string name="rooms">Rooms</string>
    <string name="delete_hotel">Delete Hotel</string>
    <string name="top_destinations_in_colombo">Top Destinations In Colombo</string>

    <string name="signUp">sign Up now</string>
    <string name="Fname">First name</string>
    <string name="Lname">Last Name</string>
    <string name="mobile">Mobile no</string>
    <string name="mail">Email</string>
    <string name="pass">Password</string>
    <string name="conf_pass">Confirm Password</string>
    <string name="signUpButton">Sign Up</string>
    <string name="ClickLogin">Click here to log in</string>
    <string name="username">User Name</string>
    <string name="logpasswor">Password</string>
    <string name="loginbutton">Log In</string>
    <string name="logcreateacount">Click here to creaate Account</string>
    <string name="logout">Log Out</string>
    <string name="grnaral">General</string>
    <string name="prosettinbutton">Profile Setting</string>
    <string name="support">Support Services</string>
    <string name="Contact">Contact Us</string>
    <string name="profdescr">Write about Your experiences /give ideas about new things / any recommendations</string>
    <string name="makereview">Make Review</string>
    <string name="delaccount">Delete Account</string>
    <string name="reviewname">Name :</string>
    <string name="reviewmobile">Mobile :</string>
    <string name="reviewemail">Mail :</string>
    <string name="reviewdescript">Tell us Your experiences / ideas of the places and hotels / any recommendations</string>
    <string name="reviewcancel">Cancel</string>
    <string name="reviewsubmit">Submit</string>
    <string name="Editprofileinfo">Edit Your Profile Info</string>
    <string name="addprofile">Add Profile Picture</string>
    <string name="updateprof">Update and Modify Profile</string>
    <string name="editfname">First Name</string>
    <string name="editLname">Last Name</string>
    <string name="editmobile">Mobile Number</string>
    <string name="editmail">Email or Gmail</string>
    <string name="editpass">New Password</string>
    <string name="editconfpass">Confirm New Password</string>
    <string name="editresetbuton">Reset</string>
    <string name="editSavebutton">Update and Save Details</string>
    <string name="cusreview">Customer Reviews</string>
    <string name="signupdescri">Already have an Account ? LOG IN</string>
    <string name="logindescr">LOG IN</string>
    <string name="logdescr">Don\'t haave Account ? SIGN UP</string>
    <string name="prof">Profile</string>
    <string name="review_about_hotel">***</string>
    <string name="Review_About_yourexperience">***</string>
    <string name="otherreview_and_recommendation">***</string>
    <string name="reviewer_name">Unknown</string>
</resources>