<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Event"
    android:background="@drawable/background4">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/back_arrow"
        android:layout_marginStart="29dp"
        android:layout_marginTop="17dp"
        android:contentDescription="@string/todo" />
    <!--Add Event-->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="225dp"
        android:layout_height="52dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/edit_event"
        android:textSize="30sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/GraphCard3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <!--Event Name-->
        <TextView
            android:id="@+id/evName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/Event_Name"
            android:textColor="#403F3F"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="3dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <!--Location Information-->
        <TextView
            android:id="@+id/loc_Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="70dp"
            android:text="@string/loc_info"
            android:textColor="#403F3F"
            android:textSize="20sp"
            android:textStyle="bold" />
        <!--Province-->
        <TextView
            android:id="@+id/province"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="105dp"
            android:text="@string/province"
            android:textColor="#403F3F"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editProvince"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="115dp"
            android:ems="7"
            android:inputType="textPersonName" />
        <!--City-->
        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="105dp"
            android:text="@string/city"
            android:textColor="#403F3F"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="115dp"
            android:ems="7"
            android:inputType="textPersonName" />

        <!--Contact Information-->
        <TextView
            android:id="@+id/contact_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="180dp"
            android:text="@string/cont_info"
            android:textColor="#403F3F"
            android:textSize="20sp"
            android:textStyle="bold" />
        <!--Name-->
        <TextView
            android:id="@+id/contact_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="215dp"
            android:text="@string/Name"
            android:textColor="#403F3F"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cont_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="225dp"
            android:ems="7"
            android:inputType="textPersonName" />
        <!--Phone-->
        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="215dp"
            android:text="@string/Phone"
            android:textColor="#403F3F"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ph_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="225dp"
            android:ems="7"
            android:inputType="phone" />
        <!--Email-->
        <TextView
            android:id="@+id/email_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="285dp"
            android:text="@string/email"
            android:textColor="#403F3F"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="300dp"
            android:ems="16"
            android:inputType="textEmailAddress" />s

        <!--Price-->

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="360dp"
            android:text="@string/price"
            android:textColor="#403F3F"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_Price"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="340dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <!--Photo-->
        <TextView
            android:id="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="400dp"
            android:text="@string/Photo"
            android:textColor="#403F3F"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_photo"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="380dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <!--Description-->
        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="440dp"
            android:text="@string/Descrption"
            android:textColor="#403F3F"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="330dp"
            android:layout_height="96dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="440dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <!--Save Changes Button-->
        <Button
            android:id="@+id/add_btn"
            android:layout_width="124dp"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="540dp"
            android:background="@drawable/btn_background"
            android:text="@string/save_changes" />


    </androidx.cardview.widget.CardView>
</RelativeLayout>